force-app/main/default/objects/CSA_Criteria__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Category</label>
    <referenceTo>CSA_Category__c</referenceTo>
    <relationshipLabel>Criteria</relationshipLabel>
    <relationshipName>Criteria</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>