force-app/main/default/objects/CSA_Criteria__c/fields/Display_order__c.field-meta.xml
<CustomField>
    <fullName>Display_order__c</fullName>
    <label>Display order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>