force-app/main/default/objects/CSA_Criteria__c/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <label>Max Value</label>
    <summarizedField>CSA_Option__c.Max_Value__c</summarizedField>
    <summaryForeignKey>CSA_Option__c.Criteria__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>