force-app/main/default/objects/CSA_Criteria__c/fields/Min_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Value__c</fullName>
    <label>Min Value</label>
    <summarizedField>CSA_Option__c.Min_Value__c</summarizedField>
    <summaryForeignKey>CSA_Option__c.Criteria__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>