force-app/main/default/objects/CSA_Criteria__c/fields/Weightage__c.field-meta.xml
<CustomField>
    <fullName>Weightage__c</fullName>
    <label>Weightage</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>